--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col l12 m12 s12 center-align">
                 <div class="conatiner">
-                    <a><img src="../profilePictures/<%=user.imageName%>" onerror="this.src='../profilePictures/default.jpg'" style="height: 25%; width: 25%;"></a>
+                    <a><img src="../profilePictures/<%=user.imageName%>" onerror="this.src='../profilePictures/default.jpg'" class="circle responsive-img" style="height: 30%; width: 30%;"></a>
                     <div class="overlay">
                         <a href="./profilePicture" class="icon">
                             <i class="material-icons prefix">edit</i>
