Goal Management for subordinates, View subordinate goals, Updated award interface

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -51,13 +51,13 @@
                     <div class="card-content">
                         <div class="row">
                             <div class="col s6 center-align">
-                                <a class="btn-floating btn-large waves-effect waves-light">
+                                <a href="/award/create" class="btn-floating btn-large waves-effect waves-light">
                                     <i class="material-icons">add</i>
                                 </a>
                                 <h5>Create</h5>
                             </div>
                             <div class="col s6 center-align">
-                                <a class="btn-floating btn-large waves-effect waves-light grey">
+                                <a href="/award/list" class="btn-floating btn-large waves-effect waves-light grey">
                                     <i class="material-icons">menu</i>
                                 </a>
                                 <h5>List</h5>
@@ -81,12 +81,12 @@
                                     <li class="collection-item avatar">
                                         <i class="material-icons circle red">flag</i>
                                         <p>Goal Count</p>
-                                        <span class="secondary-content text-dw-green-1"><%= goal %></span>
+                                        <span class="secondary-content text-dw-green-1"><%= goals %></span>
                                     </li>
                                     <li class="collection-item avatar">
                                         <i class="material-icons circle yellow accent-4">grade</i>
                                         <p>Awards Given</p>
-                                        <span class="secondary-content text-dw-green-1"><%= users %></span>
+                                        <span class="secondary-content text-dw-green-1"><%= awards %></span>
                                     </li>
                                 </ul>
                             </div>
