--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -12,6 +12,13 @@
     <link type="text/css" rel="stylesheet" href="../stylesheets/style.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="../stylesheets/datatables.min.css"  media="screen,projection"/>
 
+
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="../javascripts/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="../javascripts/materialize.min.js"></script>
+    <script type="text/javascript" src="../javascripts/script.js"></script>
+    <script type="text/javascript" src="../javascripts/datatables.min.js"></script>
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
