--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -6,10 +6,11 @@
     <div class="container">
         <div class="row">
             <% if (manager) { %>
-            <h6>Manager : </h6>
+            <h6>Manager
             <img src="../profilePictures/<%=manager.imageName%>" onerror="this.src='../profilePictures/default.jpg'" style="height: 4%; width: 4%; margin-bottom: -1%;"
                               class="tooltipped" data-position="right" data-tooltip="<%= manager.name %>">
             <% }%>
+            </h6>
         </div>
         <div class="row">
             <div class="col l12 m12 s12 center-align">
@@ -26,11 +27,12 @@
         </div>
         <div class="row">
             <% if (subordinates) { %>
-            <h6> Subordinates: </h6>
+            <h6> Subordinates
             <% for(var i=0; i < subordinates.length; i++){
             %>
             <img src="../profilePictures/<%=subordinates[i].imageName%>" onerror="this.src='../profilePictures/default.jpg'" style="height: 4%; width: 4%; margin-bottom: -1%;" class="tooltipped" data-position="right" data-tooltip="<%=subordinates[i].name %>">
             <% }}%>
+            </h6>
         </div>
         <div class="row">
             <h6>
