--- a/views/goal/create.ejs
+++ b/views/goal/create.ejs
@@ -47,7 +47,7 @@
 
                                         <div class="input-field col l6 m6 s12">
                                             <i class="material-icons prefix">date_range</i>
-                                            <input id="deadline" name="deadline" type="date" required>
+                                            <input id="deadline" name="deadline" type="text" class="datepicker" required>
                                             <label for="deadline">Deadline</label>
                                         </div>
 
