--- a/views/goal/list.ejs
+++ b/views/goal/list.ejs
@@ -65,7 +65,9 @@
                                                 });
                                             </script>
                                         </td>
+                                            <% } %>
                                         <td>
+                                            <% if (goal.approvedDate) {%>
                                             <b> Approved Date </b>
                                                 <%= goal.approvedDate %>
                                             <% } %>
