Goal creation validation

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,8 +75,65 @@ main {
     border-radius: 50%;
 }
 
+
+/* Custom Colors */
+
+.datepicker-date-display {
+    background-color: #046031 !important;
+}
+
+.is-today {
+    color: #046031 !important;
+}
+
+.is-selected .datepicker-day-button {
+    color: #fff !important;
+    background-color: #046031 !important;
+}
+
+.datepicker-cancel, .datepicker-clear, .datepicker-today, .datepicker-done {
+    color: #046031 !important;
+}
+
+.datepicker-done, .datepicker-clear, .datepicker-today, .datepicker-done {
+    color: #046031 !important;
+}
+
+.switch label input[type=checkbox]:checked+.lever {
+    background-color: #046031 !important;
+}
+
+.switch label input[type=checkbox]:checked+.lever:after {
+    background-color: #237A4C !important;
+}
+
+.input-field .prefix.active {
+    color: #046031 !important;
+}
+
+input:not([type]):focus:not([readonly]),
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=url]:not(.browser-default):focus:not([readonly]),
+input[type=time]:not(.browser-default):focus:not([readonly]),
+input[type=date]:not(.browser-default):focus:not([readonly]),
+input[type=datetime]:not(.browser-default):focus:not([readonly]),
+input[type=datetime-local]:not(.browser-default):focus:not([readonly]),
+input[type=tel]:not(.browser-default):focus:not([readonly]),
+input[type=number]:not(.browser-default):focus:not([readonly]),
+input[type=search]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]) {
+    border-bottom: 1px solid #046031;
+    -webkit-box-shadow: 0 1px 0 0 #046031;
+    box-shadow: 0 1px 0 0 #046031;
+}
+/* -- */
+
 @media (max-width: 360px) {
     #mailText {
         margin-top: -17%;
     }
 }
+
+
