--- a/views/goal/list.ejs
+++ b/views/goal/list.ejs
@@ -1,6 +1,11 @@
 <% include ../layouts/header.ejs %>
 <% include ../layouts/navbar.ejs %>
 
+<style>
+    .tabs .indicator {
+        background-color: #0F5288 !important;
+    }
+</style>
 <body class="bg">
 <br><br>
 <main>
@@ -11,73 +16,151 @@
                 <div class="card">
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
-                            <li class="tab dw-blue-1">
-                                <a href="#goals" class="left-align white-text">
-                                    <i class="material-icons">my_location</i> <span class="tab-header"> My Goals </span>
+                            <li class="tab">
+                                <a href="#organizational" class="center-align text-dw-blue-1">
+                                    <span class="tab-header"> Organizational </span>
+                                </a>
+                            </li>
+                            <li class="tab">
+                                <a href="#personal" class="center-align text-dw-blue-1">
+                                    <span class="tab-header"> Personal </span>
                                 </a>
                             </li>
                         </ul>
                     </div>
                     <div class="card-content">
-                        <div class="row">
-                            <div class="col l12 s12 m12">
-                                <table>
-                                    <thead>
+                        <div id="organizational">
+                            <div class="row">
+                                <div class="col l12 s12 m12">
+                                    <table>
+                                        <thead>
                                         <th> S. No. </th>
                                         <th> Goal </th>
                                         <th> Set Date </th>
                                         <th> Status </th>
                                         <th> Deadline </th>
                                         <th> </th>
-                                    </thead>
-                                    <tbody>
-                                    <% i = 1 %>
-                                    <% goals.forEach(function (goal) { %>
-                                    <tr class="<% if(goal.goalStatus==="REJECTED"){%>red darken-5<% } else { %> dw-blue-5<% }%>" style="border-bottom: 0px">
-                                        <td> <%= i++ %> </td>
-                                        <td> <%= goal.goal %> </td>
-                                        <td> <%= goal.setDate %> </td>
-                                        <td> <%= goal.goalStatus %> </td>
-                                        <td> <%= goal.deadline %> </td>
-                                        <td> <i class="material-icons tooltipped" data-position="top" data-tooltip="Remarks">visibility</i> </td>
-                                    </tr>
-                                    <% if (goal.goalStatus !== "PENDING") { %>
-                                    <% if (goal.goalStatus !== "REJECTED") { %>
-                                    <tr>
-                                        <td></td>
-                                        <td colspan="2">
-                                            <b> Progress </b>
-                                            <form>
-                                                <p class="range-field" style="margin-left: 5%; margin-right: 5%;">
-                                                    <input type="range" id="progress<%= goal.id %>" value="<%= goal.progress %>" min="0" max="100"
-                                                    <% if (goal.goalStatus === 'COMPLETED') {%> disabled <% }%>
-                                                    onchange="updateProgress(<%= goal.id %>)"/>
-                                                </p>
-                                            </form>
-                                        </td>
-                                        <td colspan="2">
-                                            <% if (goal.goalStatus === "COMPLETED") { %>
-                                            <b> Award </b>
-                                            <span id="awardIcon<%= goal.id %>"></span>
-                                            <script type="text/javascript">
-                                                $(document).ready(function(){
-                                                    getAward(<%= goal.AwardId %>);
-                                                });
-                                            </script>
-                                        </td>
-                                            <% } %>
-                                        <td>
-                                            <% if (goal.approvedDate) {%>
-                                            <b> Approved Date </b>
+                                        </thead>
+                                        <tbody>
+                                        <% i = 1 %>
+                                        <% goals.forEach(function (goal) {
+                                            if(goal.goalType === "ORGANIZATIONAL") {
+                                        %>
+                                        <tr class="<% if(goal.goalStatus==="REJECTED"){%>red darken-5<% } else { %> dw-blue-5<% }%>" style="border-bottom: 0px">
+                                            <td> <%= i++ %> </td>
+                                            <td> <%= goal.goal %> </td>
+                                            <td> <%= goal.setDate %> </td>
+                                            <td> <%= goal.goalStatus %> </td>
+                                            <td> <%= goal.deadline %> </td>
+                                            <td> <i class="material-icons tooltipped" data-position="top" data-tooltip="Remarks">visibility</i> </td>
+                                        </tr>
+                                        <% if (goal.goalStatus !== "PENDING") { %>
+                                        <% if (goal.goalStatus !== "REJECTED") { %>
+                                        <tr>
+                                            <td></td>
+                                            <td colspan="2">
+                                                <b> Progress </b>
+                                                <form>
+                                                    <p class="range-field" style="margin-left: 5%; margin-right: 5%;">
+                                                        <input type="range" id="progress<%= goal.id %>" value="<%= goal.progress %>" min="0" max="100"
+                                                                <% if (goal.goalStatus === 'COMPLETED') {%> disabled <% }%>
+                                                               onchange="updateProgress(<%= goal.id %>)"/>
+                                                    </p>
+                                                </form>
+                                            </td>
+                                            <td colspan="2">
+                                                <% if (goal.goalStatus === "COMPLETED") { %>
+                                                <b> Award </b>
+                                                <span id="awardIcon<%= goal.id %>"></span>
+                                                <script type="text/javascript">
+                                                    $(document).ready(function(){
+                                                        getAward(<%= goal.id %>, <%= goal.AwardId %>);
+                                                    });
+                                                </script>
+                                                <% } %>
+                                            </td>
+                                            <td>
+                                                <% if (goal.approvedDate) {%>
+                                                <b> Approved Date </b>
                                                 <%= goal.approvedDate %>
-                                            <% } %>
-                                        </td>
-                                    </tr>
-                                    <%  }
+                                                <% } %>
+                                            </td>
+                                        </tr>
+                                        <%
+                                                    }
+                                                }
+                                            }
+                                        }) %>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="personal">
+                            <div class="row">
+                                <div class="col l12 s12 m12">
+                                    <table>
+                                        <thead>
+                                        <th> S. No. </th>
+                                        <th> Goal </th>
+                                        <th> Set Date </th>
+                                        <th> Status </th>
+                                        <th> Deadline </th>
+                                        <th> </th>
+                                        </thead>
+                                        <tbody>
+                                        <% i = 1 %>
+                                        <% goals.forEach(function (goal) {
+                                        if(goal.goalType === "PERSONAL") {
+                                        %>
+                                        <tr class="<% if(goal.goalStatus==="REJECTED"){%>red darken-5<% } else { %> dw-blue-5<% }%>" style="border-bottom: 0px">
+                                            <td> <%= i++ %> </td>
+                                            <td> <%= goal.goal %> </td>
+                                            <td> <%= goal.setDate %> </td>
+                                            <td> <%= goal.goalStatus %> </td>
+                                            <td> <%= goal.deadline %> </td>
+                                            <td> <i class="material-icons tooltipped" data-position="top" data-tooltip="Remarks">visibility</i> </td>
+                                        </tr>
+                                        <% if (goal.goalStatus !== "PENDING") { %>
+                                        <% if (goal.goalStatus !== "REJECTED") { %>
+                                        <tr>
+                                            <td></td>
+                                            <td colspan="2">
+                                                <b> Progress </b>
+                                                <form>
+                                                    <p class="range-field" style="margin-left: 5%; margin-right: 5%;">
+                                                        <input type="range" id="progress<%= goal.id %>" value="<%= goal.progress %>" min="0" max="100"
+                                                                <% if (goal.goalStatus === 'COMPLETED') {%> disabled <% }%>
+                                                               onchange="updateProgress(<%= goal.id %>)"/>
+                                                    </p>
+                                                </form>
+                                            </td>
+                                            <td colspan="2">
+                                                <% if (goal.goalStatus === "COMPLETED") { %>
+                                                <b> Award </b>
+                                                <span id="awardIcon<%= goal.id %>"></span>
+                                                <script type="text/javascript">
+                                                    $(document).ready(function(){
+                                                        getAward(<%= goal.id %>, <%= goal.AwardId %>);
+                                                    });
+                                                </script>
+                                                <% } %>
+                                            </td>
+                                            <td>
+                                                <% if (goal.approvedDate) {%>
+                                                <b> Approved Date </b>
+                                                <%= goal.approvedDate %>
+                                                <% } %>
+                                            </td>
+                                        </tr>
+                                        <%
                                         }
-                                    }) %>
-                                    </tbody>
-                                </table>
+                                        }
+                                        }
+                                        }) %>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
